# OpenGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/glad/: glad.c  glad.h
lib/: assimp-vc142-mt.exp  assimp-vc142-mt.lib  glfw3.lib
res/: 简单几何数据.txt
res/shader/: Nanosuit.shader  axis.shader  light.shader
res/shader/1GetStart/1Triangle/: TriangleTest.shader  TriangleTest_yellow.shader
res/shader/1GetStart/2Shader/: ShaderTest.shader  ShaderTest_MoveRight.shader  ShaderTest_MyTry.shader  ShaderTest_PosByColor.shader  ShaderTest_UpSideDown.shader
res/shader/1GetStart/3Texture/: TextureFirstTest.shader  TextureFourthTest.shader  TextureTest.shader
res/shader/1GetStart/4Transform/: TransformTest.shader
res/shader/1GetStart/5Coordinate/: CoordinateTest.shader
res/shader/2Light/1Color/: ColorTest.shader
res/shader/2Light/2BaseLight/: Default.shader  Fourth.shader  Third.shader  light.shader
res/shader/3ModelLoading/: Default.shader
res/shader/6PBR/2IBL/: SkyBox.shader  (+9 more)
src/: main.cpp
src/test/: Test.cpp  Test.h
src/test/3ModelLoading/: ModelLoadingTest.cpp  ModelLoadingTest.h
src/tools/: Camera.h  ComputeShader.cpp  ComputeShader.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.cpp  Geometry.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MyDebug.h  Object.h  ParticleSystem.cpp  ParticleSystem.h  Path.cpp  Path.h  Shader.cpp  Shader.h  StorageBuffer.cpp  StorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
(+140 files in other folders)
